--- a/notebooks/BJA-0.1.1-pywordle.ipynb
+++ b/notebooks/BJA-0.1.1-pywordle.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,26 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Greens:[None, None, None, None, None]\n",
-      "Yellows: {0: [], 1: [], 2: [], 3: [], 4: []}\n",
-      "Guesses left: 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "w.try_word('guess')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +143,7 @@
      "text": [
       "Greens:['P', 'R', 'O', None, None]\n",
       "Yellows: {0: [], 1: [], 2: [], 3: [], 4: []}\n",
-      "Guesses left: 4\n"
+      "Guesses left: 5\n"
      ]
     }
    ],
@@ -172,21 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Greens:['P', 'R', 'O', None, None]\n",
-      "Yellows: {0: ['R'], 1: ['O'], 2: [], 3: ['F'], 4: []}\n",
-      "Guesses left: 3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'victory! word is: PROOF'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "w.try_word('roofs')"
+    "w.try_word('proof')"
    ]
   },
   {
