--- a/notebooks/BJA-0.1.1-pywordle.ipynb
+++ b/notebooks/BJA-0.1.1-pywordle.ipynb
@@ -85,9 +85,9 @@
    "outputs": [],
    "source": [
     "class Wordle:\n",
-    "    def __init__(self, word=None, n_guesses=6, n_letters=5):\n",
+    "    def __init__(self, word=None, n_guesses=6, n_letters=5, all_words=['PIVOT', 'BUMPY','SHEAR']):\n",
     "        if word == None:\n",
-    "            self.word = random.sample(all_words).upper()\n",
+    "            self.word = random.sample(set(all_words), 1).upper()\n",
     "        else:\n",
     "            self.word = word.upper()\n",
     "        self.n_guesses = n_guesses\n",
