--- a/notebooks/JGM-0.1.2-pywordle.ipynb
+++ b/notebooks/JGM-0.1.2-pywordle.ipynb
@@ -83,17 +83,18 @@
     "        self.n_letters = n_letters\n",
     "        self.guess_counter = n_guesses\n",
     "        self.greens = [None] * self.n_letters \n",
+    "        self.current_yellows = [None] * self.n_letters\n",
     "        self.yellows = {i: [] for i in range(self.n_letters)}\n",
     "        self.guessed_words = []\n",
     "        self.all_words = all_words\n",
     "        self.absent_letters = []\n",
     "        self.present_letters = []\n",
     "        self.correct_positions = [None] * self.n_letters # greens would be differnt per guess, remember correct positions\n",
-    "    \n",
+    "        \n",
     "    def try_word (self, guess):\n",
     "        # need to add a check for not doing anything if the word is already guessed correctly\n",
     "        guess = guess.upper()\n",
-    "        self.yellows = {i: [] for i in range(self.n_letters)} # yellows have to reset each time\n",
+    "        self.current_yellows = [None]* self.n_letters # yellows have to reset each time\n",
     "        self.greens = [None] * self.n_letters\n",
     "        print('guessed: ', guess)\n",
     "        if not len(guess) == self.n_letters:\n",
@@ -113,6 +114,7 @@
     "                return 'victory! word is: ' + self.word\n",
     "            if c_g in self.word and c_g != c_w:\n",
     "                self.yellows[i].append(c_g)\n",
+    "                self.current_yellows[i] = c_g\n",
     "            if c_g in self.word: # track the letters that are there for the AI later\n",
     "                self.present_letters.append(c_g)\n",
     "            if c_g not in self.word: # track letters that are not there for the AI\n",
@@ -123,10 +125,10 @@
     "        print('Greens:' + str(self.greens) + \n",
     "              '\\nYellows: ' + str(self.yellows) + \n",
     "              '\\nGuesses left: ' + str(self.guess_counter))\n",
-    "        \n",
-    "    def get_all_words (self):\n",
-    "        return self.all_words\n",
-    "    "
+    "        grn_sum = sum([x!=None for x in self.greens])\n",
+    "        yel_sum = sum([x!=None for x in self.current_yellows])\n",
+    "        return grn_sum, yel_sum # return number of greens and number of yellows\n",
+    "        "
    ]
   },
   {
