Big changes in understanding to probability and total green probability

--- a/notebooks/BJA-01.2-make-word-lists.ipynb
+++ b/notebooks/BJA-01.2-make-word-lists.ipynb
@@ -432,7 +432,7 @@
    "source": [
     "### The theoretical maximum likelihood of a word using our filtered dictionary as training data is 7.26 e-05 using word 'saaee'\n",
     "\n",
-    "### This is obviously not a word, however. Calculating the likelihoods of our words leads to 'seine' with maximum likelihood. However, it uses double E, so 'saint' is the best with no duplicate letters"
+    "### This is obviously not a word, however. Calculating the likelihoods of our words leads to 'seine' and then 'shree' with maximum likelihood. However, it uses double E, so 'saint' is the best with no duplicate letters"
    ]
   },
   {
@@ -2588,8 +2588,7 @@
    "source": [
     "for i, (word, score) in enumerate(result[2:]):\n",
     "    if contains_repeats(word, 'saintcoredbulky', 1) and (len(set(word)) >= 4):\n",
-    "        print(word, i)\n",
-    "        "
+    "        print(word, i)"
    ]
   },
   {
