--- a/notebooks/BJA-02.2-markov-chain-MLE.ipynb
+++ b/notebooks/BJA-02.2-markov-chain-MLE.ipynb
@@ -24,6 +24,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# #########################\n",
+    "# DO HMM, WHERE HIDDEN STATE = CORRECT LETTER AND YOU TRANSITION BETWEEN GREY -> YELLOW -> GREEN\n",
+    "## 5 total HMMs, one for each state "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
