--- a/notebooks/BJA-02.3-brute-force-solver.ipynb
+++ b/notebooks/BJA-02.3-brute-force-solver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,161 +33,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "      <td>I</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "      <td>R</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>R</td>\n",
-       "      <td>E</td>\n",
-       "      <td>B</td>\n",
-       "      <td>U</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>S</td>\n",
-       "      <td>I</td>\n",
-       "      <td>S</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>H</td>\n",
-       "      <td>U</td>\n",
-       "      <td>M</td>\n",
-       "      <td>P</td>\n",
-       "      <td>H</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>A</td>\n",
-       "      <td>W</td>\n",
-       "      <td>A</td>\n",
-       "      <td>K</td>\n",
-       "      <td>E</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12967</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>U</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>I</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12968</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "      <td>L</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12969</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>G</td>\n",
-       "      <td>O</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12970</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>M</td>\n",
-       "      <td>E</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12971</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>M</td>\n",
-       "      <td>I</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12972 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       0  1  2  3  4\n",
-       "0      C  I  G  A  R\n",
-       "1      R  E  B  U  T\n",
-       "2      S  I  S  S  Y\n",
-       "3      H  U  M  P  H\n",
-       "4      A  W  A  K  E\n",
-       "...   .. .. .. .. ..\n",
-       "12967  Z  U  Z  I  M\n",
-       "12968  Z  Y  G  A  L\n",
-       "12969  Z  Y  G  O  N\n",
-       "12970  Z  Y  M  E  S\n",
-       "12971  Z  Y  M  I  C\n",
-       "\n",
-       "[12972 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chardf = pd.DataFrame([list(word.upper()) for word in word_list]).dropna(axis=1)\n",
-    "chardf"
+    "# chardf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# word list with frequencies\n",
+    "wl = pd.read_csv(r'..\\data\\processed\\wordle_google_freq_word_list.csv', index_col=0)\n",
+    "\n",
+    "# Read in  Bags of Words matrices: \n",
+    "with open(r'..\\data\\processed\\bags_of_words.json', 'r') as infile:\n",
+    "    all_bow = json.load(infile)\n",
+    "bow17 = all_bow['combined_wordle_google']\n",
+    "bowwordle = all_bow['all_wordle']\n",
+    "bowcur = all_bow['wordle_curated']\n",
+    "\n",
+    "lfl = pd.read_csv(r'..\\data\\processed\\letter_freq_likelihoods.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
