--- a/notebooks/JGM-get-5letter-words.ipynb
+++ b/notebooks/JGM-get-5letter-words.ipynb
@@ -373,9 +373,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sklearn",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sklearn"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
