--- a/notebooks/wordl-player-gym-v0.ipynb
+++ b/notebooks/wordl-player-gym-v0.ipynb
@@ -60161,9 +60161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sklearn",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sklearn"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -60175,7 +60175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
