word frequency probability work

--- a/notebooks/BJA-02.3-brute-force-solver.ipynb
+++ b/notebooks/BJA-02.3-brute-force-solver.ipynb
@@ -22,18 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(r'..\\data\\processed\\wordle_words.json') as infile:\n",
     "    word_list = json.load(infile)\n",
-    "word_list = [word.upper() for word in word_list]"
+    "word_list = [word.upper() for word in word_list]\n",
+    "word_list_set = set(word_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Wordle:\n",
-    "    def __init__(self, word=None, n_guesses=6, n_letters=5, all_words=word_list, ben_mode=False):\n",
+    "    def __init__(self, word=None, n_guesses=6, n_letters=5, all_words=word_list_set, ben_mode=False):\n",
     "        self.ben_mode = ben_mode\n",
     "        if word == None:\n",
     "            self.word = random.sample(set(all_words), 1)[0]\n",
@@ -141,7 +142,7 @@
     "        if self.guess_counter == 0:\n",
     "            self.state=True\n",
     "            self.win = False\n",
-    "            if not self.ben_mode: print(\"YOU LOSE-TOO MANY GUESSES\")\n",
+    "#             if not self.ben_mode: print(\"YOU LOSE-TOO MANY GUESSES\")\n",
     "            if self.ben_mode:\n",
     "                return self.ben_mode_return()\n",
     "            else:\n",
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +181,7 @@
        "([None, None, 'A', None, 'E'], ['F'], ['L', 'M'])"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,38 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(False,\n",
-       " [None, None, 'A', None, 'E'],\n",
-       " ['H', 'E', 'F'],\n",
-       " {0: ['H', 'F'], 1: ['E'], 2: [], 3: [], 4: []})"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# w.try_word('hello')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def word_filter(output, word_list=word_list):\n",
     "    \"\"\"\n",
     "    Takes in output from Wordle class and filters the list of words for possible corrects.\n",
-    "    Uses chardf (pandas DF separated one char per column) for easy filtering\n",
-    "    Returns list of words that could work. \n",
+    "    Returns list of words that could still be correct. \n",
     "    \"\"\"\n",
     "    \n",
     "    greens, yellows, absent_letters = output\n",
@@ -247,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +251,7 @@
        "['CHAFE', 'FEARE', 'FEASE', 'FEAZE', 'FRAPE', 'FRATE', 'NEAFE']"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
