--- a/notebooks/BJA-02.3-brute-force-solver.ipynb
+++ b/notebooks/BJA-02.3-brute-force-solver.ipynb
@@ -29,25 +29,10 @@
     "with open(r'..\\data\\processed\\wordle_words.json') as infile:\n",
     "    word_list = json.load(infile)\n",
     "word_list = [word.upper() for word in word_list]\n",
-    "word_list_set = set(word_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "word_list_set = set(word_list)\n",
+    "\n",
     "chardf = pd.DataFrame([list(word.upper()) for word in word_list]).dropna(axis=1)\n",
-    "# chardf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# word list with frequencies\n",
     "wl = pd.read_csv(r'..\\data\\processed\\wordle_google_freq_word_list.csv', index_col=0)\n",
     "\n",
@@ -59,106 +44,6 @@
     "bowcur = all_bow['wordle_curated']\n",
     "\n",
     "lfl = pd.read_csv(r'..\\data\\processed\\letter_freq_likelihoods.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Wordle:\n",
-    "    def __init__(self, word=None, n_guesses=6, n_letters=5, all_words=word_list_set, ben_mode=False):\n",
-    "        self.ben_mode = ben_mode\n",
-    "        if word == None:\n",
-    "            self.word = random.sample(set(all_words), 1)[0]\n",
-    "        else:\n",
-    "            self.word = word.upper()\n",
-    "        self.n_guesses = n_guesses\n",
-    "        self.n_letters = n_letters\n",
-    "        self.guess_counter = n_guesses\n",
-    "        self.greens = [None] * self.n_letters \n",
-    "        self.current_yellows = [None] * self.n_letters\n",
-    "        self.yellows_pos = {i: [] for i in range(self.n_letters)}\n",
-    "        self.guessed_words = []\n",
-    "        self.all_words = [word.upper() for word in all_words]\n",
-    "        self.absent_letters = []\n",
-    "        self.present_letters = []\n",
-    "        self.correct_positions = [None] * self.n_letters # greens would be differnt per guess, remember correct positions\n",
-    "        self.state = None\n",
-    "        self.qstate = [0] * self.n_letters\n",
-    "        self.tmp_qstate = [0] * self.n_letters\n",
-    "        self.win = False\n",
-    "        self.yellowlist = []\n",
-    "        \n",
-    "    def try_word(self, guess):\n",
-    "        # need to add a check for not doing anything if the word is already guessed correctly\n",
-    "        guess = guess.upper()\n",
-    "        self.state = None\n",
-    "        self.current_yellows = [None] * self.n_letters \n",
-    "        self.current_greens = [None] * self.n_letters\n",
-    "        self.tmp_qstate = [0] * self.n_letters\n",
-    "        \n",
-    "        if not self.ben_mode: print('guessed: ', guess)\n",
-    "        if not len(guess) == self.n_letters:\n",
-    "            raise ValueError('wrong word length')\n",
-    "        if guess not in self.all_words:\n",
-    "            raise ValueError('invalid word')\n",
-    "        if guess in self.guessed_words:\n",
-    "            raise ValueError('word already guessed')\n",
-    "        self.guessed_words.append(guess)\n",
-    "        # c_g = character_guess,  c_w = character_word\n",
-    "        for i, (c_g, c_w) in enumerate(zip(guess, self.word)):\n",
-    "            if c_g == c_w:\n",
-    "                self.greens[i] = c_g\n",
-    "                self.correct_positions[i] = c_g\n",
-    "                self.qstate[i] = 1\n",
-    "                self.tmp_qstate[i] = 1\n",
-    "            # Check for number of non-None in greens list \n",
-    "            if sum(bool(char) for char in self.greens) == self.n_letters:\n",
-    "                self.state = True\n",
-    "                self.win = True\n",
-    "                print('victory! word is: ' + self.word) \n",
-    "                grn_sum = sum([x!=None for x in self.greens])\n",
-    "                yel_sum = sum([x!=None for x in self.current_yellows])\n",
-    "                \n",
-    "                if self.ben_mode:\n",
-    "                    return self.ben_mode_return()\n",
-    "                else:\n",
-    "                    return grn_sum, yel_sum\n",
-    "            if c_g in self.word and c_g != c_w:\n",
-    "                self.yellows_pos[i].append(c_g)\n",
-    "                self.current_yellows[i] = c_g\n",
-    "                if c_g not in self.yellowlist:\n",
-    "                    self.yellowlist += c_g\n",
-    "            if c_g in self.word: # track the letters that are there for the AI later\n",
-    "                self.present_letters.append(c_g)\n",
-    "            if c_g not in self.word: # track letters that are not there for the AI\n",
-    "                self.absent_letters.append(c_g)\n",
-    "        self.guess_counter -= 1\n",
-    "        grn_sum = sum([x!=None for x in self.greens])\n",
-    "        yel_sum = sum([x!=None for x in self.current_yellows])\n",
-    "        \n",
-    "        if self.guess_counter == 0:\n",
-    "            self.state=True\n",
-    "            self.win = False\n",
-    "#             if not self.ben_mode: print(\"YOU LOSE-TOO MANY GUESSES\")\n",
-    "            if self.ben_mode:\n",
-    "                return self.ben_mode_return()\n",
-    "            else:\n",
-    "                return grn_sum, yel_sum # return number of greens and number of yellows\n",
-    "        if not self.ben_mode: \n",
-    "            print('Greens:' + str(self.greens) + \n",
-    "                  '\\nYellows: ' + str(self.yellows_pos) + \n",
-    "                  '\\nGuesses left: ' + str(self.guess_counter))\n",
-    "        \n",
-    "        if self.ben_mode:\n",
-    "            return self.ben_mode_return()\n",
-    "        else:\n",
-    "            return grn_sum, yel_sum # return number of greens and number of yellows\n",
-    "    \n",
-    "    def ben_mode_return(self):\n",
-    "        return self.greens, self.yellowlist, self.absent_letters"
    ]
   },
   {
@@ -1082,6 +967,106 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Wordle:\n",
+    "    def __init__(self, word=None, n_guesses=6, n_letters=5, all_words=word_list_set, ben_mode=False):\n",
+    "        self.ben_mode = ben_mode\n",
+    "        if word == None:\n",
+    "            self.word = random.sample(set(all_words), 1)[0]\n",
+    "        else:\n",
+    "            self.word = word.upper()\n",
+    "        self.n_guesses = n_guesses\n",
+    "        self.n_letters = n_letters\n",
+    "        self.guess_counter = n_guesses\n",
+    "        self.greens = [None] * self.n_letters \n",
+    "        self.current_yellows = [None] * self.n_letters\n",
+    "        self.yellows_pos = {i: [] for i in range(self.n_letters)}\n",
+    "        self.guessed_words = []\n",
+    "        self.all_words = [word.upper() for word in all_words]\n",
+    "        self.absent_letters = []\n",
+    "        self.present_letters = []\n",
+    "        self.correct_positions = [None] * self.n_letters # greens would be differnt per guess, remember correct positions\n",
+    "        self.state = None\n",
+    "        self.qstate = [0] * self.n_letters\n",
+    "        self.tmp_qstate = [0] * self.n_letters\n",
+    "        self.win = False\n",
+    "        self.yellowlist = []\n",
+    "        \n",
+    "    def try_word(self, guess):\n",
+    "        # need to add a check for not doing anything if the word is already guessed correctly\n",
+    "        guess = guess.upper()\n",
+    "        self.state = None\n",
+    "        self.current_yellows = [None] * self.n_letters \n",
+    "        self.current_greens = [None] * self.n_letters\n",
+    "        self.tmp_qstate = [0] * self.n_letters\n",
+    "        \n",
+    "        if not self.ben_mode: print('guessed: ', guess)\n",
+    "        if not len(guess) == self.n_letters:\n",
+    "            raise ValueError('wrong word length')\n",
+    "        if guess not in self.all_words:\n",
+    "            raise ValueError('invalid word')\n",
+    "        if guess in self.guessed_words:\n",
+    "            raise ValueError('word already guessed')\n",
+    "        self.guessed_words.append(guess)\n",
+    "        # c_g = character_guess,  c_w = character_word\n",
+    "        for i, (c_g, c_w) in enumerate(zip(guess, self.word)):\n",
+    "            if c_g == c_w:\n",
+    "                self.greens[i] = c_g\n",
+    "                self.correct_positions[i] = c_g\n",
+    "                self.qstate[i] = 1\n",
+    "                self.tmp_qstate[i] = 1\n",
+    "            # Check for number of non-None in greens list \n",
+    "            if sum(bool(char) for char in self.greens) == self.n_letters:\n",
+    "                self.state = True\n",
+    "                self.win = True\n",
+    "                print('victory! word is: ' + self.word) \n",
+    "                grn_sum = sum([x!=None for x in self.greens])\n",
+    "                yel_sum = sum([x!=None for x in self.current_yellows])\n",
+    "                \n",
+    "                if self.ben_mode:\n",
+    "                    return self.ben_mode_return()\n",
+    "                else:\n",
+    "                    return grn_sum, yel_sum\n",
+    "            if c_g in self.word and c_g != c_w:\n",
+    "                self.yellows_pos[i].append(c_g)\n",
+    "                self.current_yellows[i] = c_g\n",
+    "                if c_g not in self.yellowlist:\n",
+    "                    self.yellowlist += c_g\n",
+    "            if c_g in self.word: # track the letters that are there for the AI later\n",
+    "                self.present_letters.append(c_g)\n",
+    "            if c_g not in self.word: # track letters that are not there for the AI\n",
+    "                self.absent_letters.append(c_g)\n",
+    "        self.guess_counter -= 1\n",
+    "        grn_sum = sum([x!=None for x in self.greens])\n",
+    "        yel_sum = sum([x!=None for x in self.current_yellows])\n",
+    "        \n",
+    "        if self.guess_counter == 0:\n",
+    "            self.state=True\n",
+    "            self.win = False\n",
+    "#             if not self.ben_mode: print(\"YOU LOSE-TOO MANY GUESSES\")\n",
+    "            if self.ben_mode:\n",
+    "                return self.ben_mode_return()\n",
+    "            else:\n",
+    "                return grn_sum, yel_sum # return number of greens and number of yellows\n",
+    "        if not self.ben_mode: \n",
+    "            print('Greens:' + str(self.greens) + \n",
+    "                  '\\nYellows: ' + str(self.yellows_pos) + \n",
+    "                  '\\nGuesses left: ' + str(self.guess_counter))\n",
+    "        \n",
+    "        if self.ben_mode:\n",
+    "            return self.ben_mode_return()\n",
+    "        else:\n",
+    "            return grn_sum, yel_sum # return number of greens and number of yellows\n",
+    "    \n",
+    "    def ben_mode_return(self):\n",
+    "        return self.greens, self.yellowlist, self.absent_letters"
+   ]
   },
   {
    "cell_type": "code",
